# fetshu-bot

./: .env.template  .gitignore  Justfile  README.md  pyproject.toml
openspec/changes/archive/2025-11-03-add-sqlite-database/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-03-add-sqlite-database/specs/api-server/: spec.md
openspec/changes/archive/2025-11-03-add-sqlite-database/specs/database-layer/: spec.md
openspec/specs/api-server/: spec.md
openspec/specs/database-layer/: spec.md
server/: bootstrap.py
server/api/: __init__.py  health.py  webhook.py
server/core/: __init__.py  config.py
server/models/: __init__.py  coze.py  health.py  webhook.py
server/services/: __init__.py  coze_service.py  webhook_handler.py
src/: app.py
src/core/: config.py  database.py
src/models/: __init__.py  base.py
web/: .cta.json  biome.json  package.json
web/src/components/: Header.tsx
