[project]
name = "feishu-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "aiosqlite>=0.21.0",
    "cozepy>=0.20.0",
    "fastapi[standard]>=0.120.4",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
]
[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.uv]
workspace.exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]
# Unlike Flake8, default to a complexity level of 10.
mccabe.max-complexity = 10

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
docstring-code-format = true
